# Vigar

./: .flake8  .gitignore  .pre-commit-config.yaml  .semgrep.yml  Docker-compose.yml  Dockerfile  Makefile  README.md  SECURITY.md  docker-compose.override.yml  manage.py  pyproject.toml  renovate-config.js  renovate.json  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.devcontainer.yml
.github/: copilot-instructions.md
.github/workflows/: dev-ci.yml  dev-docker-publish.yml  dev-security.yml  nightly-db-backup.yml  prod-ci.yml  prod-docker-publish.yml  release-please.yml  renovate.yml  security.yml
Vigar/: asgi.py  settings.py  urls.py  wsgi.py
core/: admin.py  check_serializers.py  filters.py  models.py  permissions.py  selectors.py  serializers.py  services.py  urls.py  validators.py  views.py
core/management/commands/: create_roles.py  seed_data.py
core/migrations/: 0001_initial.py
core/tests/: test_services_validators.py
nginx/: nginx.conf
