[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.flake8]
max-line-length = 88
extend-ignore = [
  "E203",
  "W503",
]
per-file-ignores = [
  "*/migrations/*.py:E501",
  "Vigar/settings.py:E501",
  "Vigar/urls.py:E501",
  "core/urls.py:E501",
]

[tool.mypy]
disallow_untyped_defs = false
disallow_incomplete_defs = false
implicit_optional = true
ignore_missing_imports = true
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "Vigar.settings"

[[tool.mypy.overrides]]
module = ["core.models"]
disable_error_code = ["var-annotated"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "vigar"
version = "0.1.0"
description = "Vigar backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

